# meta-rl-hack

./: .dockerignore  .env.example  .gitattributes  .gitignore  BLOG.md  Dockerfile  ENV.md  Makefile  README.md  RUNBOOK.md  VIDEO_SCRIPT.md  __init__.py  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml
chaos/: easy-redis-latency.yaml  hard-silent-decimal-corruption.yaml  medium-payments-memory-stress.yaml
colab/: README.md  train_incident_commander.ipynb  train_lib.py
docs/: ENV_DEEP.md  ENV_SHALLOW.md  TASKS_SHALLOW.md
frontend/: .env.example  Dockerfile  package.json  tailwind.config.js
kaggle/: README.md  generate_notebooks.py  kaggle_train_shard1.ipynb  kaggle_train_shard2.ipynb  kaggle_train_shard3.ipynb
notebooks/: incident_commander_colab.ipynb
rl-agent/: Dockerfile  README.md  dashboard.html  dashboard_pages.py  eval.py  inference.py  requirements-train.txt  requirements.txt  server.py  showcase.html  showcase_data.json
scripts/: HF_JOBS.md  aws_inventory.py  aws_killswitch.py  build-all.sh  build_showcase_data.py  chaos_aws.py  download_latest_ckpt.py  health-check.sh  hf_job_entrypoint.sh  inject-fault.sh  launch_hf_job.ps1  launch_phase2.ps1  launch_phase3.ps1  load_env.ps1  merge_lora_adapters.py  push_to_hf.py  push_to_remotes.ps1  reset-cluster.sh  run_pipeline.ps1  run_training.py  setup-cluster.sh  setup_eks.ps1  setup_eks.sh  setup_kind.ps1  setup_kind.sh  setup_venv.ps1  teardown_eks.ps1  teardown_eks.sh  teardown_kind.ps1  teardown_kind.sh  test_actions.py
server/: app.py
traffic/: locustfile.py
voice/: SHOT_LIST.md  (+14 more)
(+561 files in other folders)
